# Eye-in-Hand-Camera

./: .gitignore  LICENSE  README.md  requirements.txt
arduino/: README.md  actuator_controller.ino
src/cobot2/: package.xml  setup.py
src/cobot2/cobot2/: auth_action_server.py  follow_logger_node.py  follow_ui_node.py  get_keyword.py  orchestrator.py  recovery.py  safety_monitor_node.py  salute_node.py  shoot_node.py  speak.py  stt.py  tcp_follow_node.py  wakeup_word.py  yolo_camera_node.py
src/cobot2/launch/: cobot2.launch.py
src/cobot2_interfaces/: CMakeLists.txt  package.xml
src/cobot2_interfaces/action/: Auth.action
