<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cobot2</name>
  <version>0.0.0</version>
  <description>Vision-based TCP follow and task automation system using ROS 2.</description>
  <maintainer email="mhn06005@gmail.com">june</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>dsr_msgs2</depend>
  <depend>ament_index_python</depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>dsr_bringup2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
